--- a/index.html
+++ b/index.html
@@ -4,21 +4,70 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Olá, eu sou a cabeça</title>
+    <title>Mateus Barros CV</title>
+
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap"
+    />
+
+    <!--Font Awesome-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
+    <!--Padrão-->
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>h1 Eu sou o corpo</h1>
-    <h2>h1 Eu sou o corpo</h2>
+    <main class="resume-contents">
+      <section class="left-section">
+        <section class="left-section-contents">
+          <div class="profile">
+            <img
+              class="profile-image"
+              src="img/profile_image.jpg"
+              alt="Profile image"
+            />
+            <p class="name">Mateus Barros</p>
+            <p class="profession">Front-End Developer</p>
+          </div>
+          <div class="contact-info">
+            <p class="left-title">Contato</p>
+            <ul>
+              <li><i class="fa fa-phone">+55 11 99999-1111</i></li>
+              <li><i class="fa fa-envelope">mateus@email.com</i></li>
+              <li><i class="fa fa-globe">www.mateus.com.br</i></li>
+              <li><i class="fa fa-git">mateusgit</i></li>
+            </ul>
+          </div>
+          <div class="skills">
+            <p class="left-title">Skills</p>
+            <ul>
+              <li><p>HTML, CSS, Git & GitHub</p></li>
+              <li><p>Javascript</p></li>
+            </ul>
+          </div>
+        </section>
+      </section>
 
-    <ol>
-      <li>Café</li>
-      <li>Chá</li>
-      <li>Leite</li>
-    </ol>
-    <ul>
-      <li>Café</li>
-      <li>Chá</li>
-      <li>Leite</li>
-    </ul>
+      <section class="right-section">
+        <div class="right-section-contents">
+          <section class="about gap">
+            <div class="right-title">Sobre Mim</div>
+            <p class="about-me-contents">
+              Olá, Sou mateus <br />
+              <br />
+              Um pouco mais sobre o que faço <br />
+              Quais são minhas competencias
+            </p>
+          </section>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
