--- a/index.html
+++ b/index.html
@@ -67,6 +67,27 @@
             </p>
           </section>
         </div>
+        <section class="experience gap">
+          <div class="right-title">Experiência</div>
+          <div class="experience-contents">
+            <div class="exp-left">
+              <p class="exp-company-name">Empresa 01</p>
+              <p class="exp-time-period">2021-present</p>
+            </div>
+            <div class="exp-right">
+              <p class="exp-position">Engenheiro de software</p>
+              <p class="exp-desc">Descreva aqui as principais atividades</p>
+            </div>
+            <div class="exp-left">
+              <p class="exp-company-name">Empresa 02</p>
+              <p class="exp-time-period">2017-present</p>
+            </div>
+            <div class="exp-right">
+              <p class="exp-position">Engenheiro de software</p>
+              <p class="exp-desc">Descreva aqui as principais atividades</p>
+            </div>
+          </div>
+        </section>
       </section>
     </main>
   </body>
