--- a/index.html
+++ b/index.html
@@ -88,6 +88,27 @@
             </div>
           </div>
         </section>
+        <section class="education gap">
+          <div class="right-title">Formação Acadêmica</div>
+          <div class="education-contents">
+            <div class="education-left">
+              <p class="education-school-name">Uninassau</p>
+              <p class="education-time-period">2021~2023</p>
+            </div>
+            <div class="education-right">
+              <p class="education-subject">Engenharia de software</p>
+              <p class="edication-desc">Graduação em engenharia de software</p>
+            </div>
+            <div class="education-left">
+              <p class="education-school-name">Ebac</p>
+              <p class="education-time-period">2022</p>
+            </div>
+            <div class="education-right">
+              <p class="education-subject">Engenharia de software</p>
+              <p class="edication-desc">Graduação em engenharia de software</p>
+            </div>
+          </div>
+        </section>
       </section>
     </main>
   </body>
