--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
             <div class="education-right">
               <p class="education-subject">Engenharia de software</p>
-              <p class="edication-desc">Graduação em engenharia de software</p>
+              <p class="education-desc">Graduação em engenharia de software</p>
             </div>
             <div class="education-left">
               <p class="education-school-name">Ebac</p>
@@ -105,7 +105,30 @@
             </div>
             <div class="education-right">
               <p class="education-subject">Engenharia de software</p>
-              <p class="edication-desc">Graduação em engenharia de software</p>
+              <p class="education-desc">Graduação em engenharia de software</p>
+            </div>
+          </div>
+        </section>
+        <section class="awards gap">
+          <div class="right-title">Cursos</div>
+          <div class="awards-contents">
+            <div class="awards-left">
+              <p class="awards-company-name">Ebac</p>
+              <p class="awards-time-period">Julho de 2022</p>
+            </div>
+            <div class="awards-right">
+              <p class="awards-name">Jornada Dev</p>
+              <p class="awards-desc">
+                Semana para começar na carreira de programação
+              </p>
+            </div>
+            <div class="awards-left">
+              <p class="awards-company-name">Ebac</p>
+              <p class="awards-time-period">2019</p>
+            </div>
+            <div class="awards-right">
+              <p class="awards-name">Analise de dados</p>
+              <p class="awards-desc">Cursos feito pela Ebac em 2019</p>
             </div>
           </div>
         </section>
